[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'eternitrace'
version = '1.0.0'

[[bin]]
name = 'eternitrace'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'

[dependencies.eternitrace-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '779a28a1111c46481e45d1a54d945cd361a9c73b'
