[package]
authors = ['Steve Degosserie <steve@block0.io>']
edition = '2018'
name = 'eternitrace-runtime-wasm'
version = '1.0.0'

[features]
default = []
std = ['eternitrace-runtime/std']

[workspace]
members = []
[dependencies.eternitrace-runtime]
default-features = false
path = '..'
[profile.release]
lto = true
panic = 'abort'

[lib]
crate-type = ['cdylib']
