[package]
authors = ['Steve Degosserie <steve@block0.io>']
edition = '2018'
name = 'grid-runtime-wasm'
version = '1.0.0'

[features]
default = []
std = ['grid-runtime/std']

[workspace]
members = []
[dependencies.grid-runtime]
default-features = false
path = '..'
[profile.release]
lto = true
panic = 'abort'

[lib]
crate-type = ['cdylib']
